--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
-VITE_BACKEND_URL = "https://vtfashions.onrender.com"
-VITE_RAZORPAY_KEY_ID = '-------- Paste Razorpay key Id --------'
+# VITE_BACKEND_URL = "https://vtfashions.onrender.com"
+VITE_BACKEND_URL = "http://localhost:4000"
+
+VITE_RAZORPAY_KEY_ID = 'rzp_test_bVKWiQiqWpoJWF'
+
