--- a/backend/.env
+++ b/backend/.env
@@ -13,7 +13,7 @@ STRIPE_SECRET_KEY = "-------- Paste Stripe Secret key --------"
 RAZORPAY_KEY_SECRET = 'oVgecZVxYOSlfZ4gUEzJ5McG'
 RAZORPAY_KEY_ID = 'rzp_test_bVKWiQiqWpoJWF'
 
-EMAIL_USER="anub0709@gmail.com"
-EMAIL_PASS="xbic bvsb uuph rzdr"
+EMAIL_USER="dressfashiond@gmail.com"
+EMAIL_PASS="kesr xczg gvwn ikps "
 #admin_mail:
-EMAIL_ADMIN="anub0709@gmail.com"
+EMAIL_ADMIN="dressfashiond@gmail.com"
