--- a/backend/.env
+++ b/backend/.env
@@ -10,8 +10,8 @@ CLOUDINARY_NAME = "dx2dvybl9"
 
 STRIPE_SECRET_KEY = "-------- Paste Stripe Secret key --------"
 
-RAZORPAY_KEY_SECRET = 'oVgecZVxYOSlfZ4gUEzJ5McG'
-RAZORPAY_KEY_ID = 'rzp_test_bVKWiQiqWpoJWF'
+RAZORPAY_KEY_SECRET = 'p4frRJx1xgSEXuAVZomR3qK9'
+RAZORPAY_KEY_ID = 'rzp_live_u0uxduptTcWqT0'
 
 EMAIL_USER="dressfashiond@gmail.com"
 EMAIL_PASS="kesr xczg gvwn ikps "
