--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # VITE_BACKEND_URL = "https://vtfashions.onrender.com"
 VITE_BACKEND_URL = "https://vtf.onrender.com"
 
-VITE_RAZORPAY_KEY_ID = 'rzp_test_bVKWiQiqWpoJWF'
+VITE_RAZORPAY_KEY_ID = 'rzp_live_u0uxduptTcWqT0'
 
